--- a/jikanwari.css
+++ b/jikanwari.css
@@ -1,9 +1,13 @@
 body {
     font-family: Arial, sans-serif;
     background-color: #000000;
-    color: #333;
+    color: #000000;
     margin: 0;
     padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
 
 h1 {
@@ -14,10 +18,12 @@ h1 {
 .container {
     width: 80%;
     max-width: 600px;
+    max-height: 80vh; /* 固定の高さを設定 */
     background-color: white;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     padding: 20px;
+    overflow-y: auto; /* 垂直スクロールを許可 */
 }
 .schedule {
     list-style-type: none;
