--- a/jikanwari.css
+++ b/jikanwari.css
@@ -15,21 +15,41 @@ h1 {
     margin-bottom: 20px;
     color: #000000;
 }
+
 .container {
     width: 80%;
     max-width: 600px;
-    max-height: 80vh; /* 固定の高さを設定 */
+    max-height: 80vh;
     background-color: white;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     padding: 20px;
-    overflow-y: auto; /* 垂直スクロールを許可 */
+    overflow-y: auto;
 }
+
+#toggleButton {
+    display: block;
+    margin: 10px auto;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    background-color: #007BFF;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    transition: background-color 0.3s;
+}
+
+#toggleButton:hover {
+    background-color: #0056b3;
+}
+
 .schedule {
     list-style-type: none;
     padding: 0;
     margin: 0;
 }
+
 .schedule > li {
     border: 1px solid #ccc;
     border-radius: 4px;
@@ -39,22 +59,32 @@ h1 {
     background-color: #f0f0f0;
     transition: background-color 0.3s, transform 0.3s;
 }
+
 .schedule > li:hover {
     background-color: #e0e0e0;
     transform: scale(1.02);
 }
+
 .schedule ul {
     list-style-type: none;
     padding: 0;
     margin: 0;
     display: none;
 }
+
 .schedule ul li {
     border: none;
     background-color: white;
     padding: 5px 10px;
     border-bottom: 1px solid #ccc;
 }
+
 .schedule ul li:last-child {
     border-bottom: none;
+}
+
+#imageContainer img {
+    width: 100%;
+    height: auto;
+    border-radius: 8px;
 }
